アカウント確認を行うAPIを追加
