# auth/presentation/request/account/checkAccount_request.gen.go
@@ -1,0 +1,7 @@
+package account
+
+type CheckAccounts []CheckAccount
+
+type CheckAccount struct {
+	Email string `json:"email"`
+}
